# swagger/model_attachment.go
@@ -1,16 +1,0 @@
-/*
- * NetSchool
- *
- * The API for the NetSchool irTech project
- *
- * API version: 4.30.43656
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type Attachment struct {
-	Id               int32  `json:"id,omitempty"`
-	Name             string `json:"name,omitempty"`
-	OriginalFileName string `json:"originalFileName,omitempty"`
-	Description      string `json:"description,omitempty"`
-}
